Add name to AdminUser and owner to Order

--- a/config/locales/models/order.uk.yml
+++ b/config/locales/models/order.uk.yml
@@ -2,8 +2,8 @@ uk:
   activerecord:
     attributes:
       order:
-        customer: Замовник
         customer_id: Замовник
+        admin_user_id: Відповідальний
         status: Статус
         paid: Оплата
 
