Add articles. Some fix and issues

--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -8,6 +8,7 @@ uk:
       order_detail: Деталі замовлення
       service: Послуга
       landing_message: Повідомлення
+      articles: Статті
     errors:
       messages:
         record_invalid: 'Виникли помилки: %{errors}'
