--- a/config/locales/models/article_uk.yml
+++ b/config/locales/models/article_uk.yml
@@ -5,7 +5,7 @@ uk:
         service_id: Послуга
         title: Назва статті
         description: Короткий опис
-        published: Опубліковано
+        published: Статус
         body: Стаття
         image: Фото
         created_at_field: Створено
