--- a/config/locales/models/order.uk.yml
+++ b/config/locales/models/order.uk.yml
@@ -11,6 +11,7 @@ uk:
         created_at_field: Створено
         updated_at_field: Оновлено
         price: Вартість
+        description: Опис
 
   enums:
     admin:
