--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -1,5 +1,44 @@
 ---
 uk:
+  landing:
+    navigation:
+      top: "Швейна майстерня"
+      contact_form_button: "Звʼязатися з нами"
+      main: "Головна"
+      services: "Послуги"
+      prices: "Ціни"
+      contacts: "Контакти"
+      faq: "FAQ"
+      articles: "Блог"
+
+    hero-1:
+      top: "Шукаєте ідеальний ремонт одягу?"
+      h1: "Ми пропонуємо якісний ремонт та ексклюзивне пошиття одягу. Весь спектр послуг кравця."
+      left: "Довіртеся майстрам!"
+      right: "Ваш стиль – це наша турбота!"
+      img_alt: "Швейна майстерня ☞ ДРУЖБА ☜"
+
+    services:
+      h2: "Наші послуги на ремонт одягу"
+      card1:
+        alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Заміна замків у верхньому та легкому одягу"
+        h2: "Заміна замків у верхньому та легкому одягу"
+        p1: "від 150 грн"
+        p2: "Це важливий етап у догляді за вашим одягом.
+            Час від часу може знадобитися заміна зламаного або пошкодженого замка,
+            щоб ваш одяг виглядав на висоті. Це досить складний та трудомісткий процес,
+            але з нашою допомогою, ви зможете продовжити використовувати улюблені речі ще довгий час."
+      card2:
+        alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Штуковка (штопка) джинсових виробів"
+        h2: "Штуковка (штопка) джинсових виробів"
+        p1: "від 150 грн"
+        p2: "Це процес відновлення пошкоджених або протертих місць на джинсових речах.
+            Зазвичай це виконується шляхом закладання строчок чи патчів на пошкоджені ділянки,
+            що дозволяє джинсам виглядати як новими.
+            Штуковка джинсових виробів допомагає продовжити термін служби джинс та зберегти їх стильний вигляд."
+
+
+
   activerecord:
     models:
       admin_user: Користувач
