--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -39,15 +39,14 @@ ru:
             что позволяет джинсам выглядеть, как новыми.
             Штуковка джинсовых изделий помогает увеличить срок службы джинс и сохранить их стильный вид."            
       card3:
-        alt: "Швейная мастерская ☞ ДРУЖБА ☜ - Штуковка (штопка) джинсових изделий"
-        h2: "Штуковка (штопка) джинсових изделий"
-        p1: "от 150 грн"
-        p2: "Это процесс обновления поврежденных или протертых мест на джинсовых вещах.
-            Обычно это происходит путем 
-            Обычно это выполняется путем закладки строчек или патчей на поврежденные участки,
-            что позволяет джинсам выглядеть, как новыми.
-            Штуковка джинсовых изделий помогает увеличить срок службы джинс и сохранить их стильный вид."            
-
+        alt: "Швейная мастерская ☞ ДРУЖБА ☜ - Ремонт кожаных и меховых изделий"
+        h2: "Ремонт кожаных и меховых изделий"
+        p1: "от 200 грн"
+        p2: "Это очень важная процедура, которая сохраняет качество и продолжительность носки таких вещей
+            Во время ремонта специалисты осуществляют реставрацию повреждений,
+            заменяют устаревшие детали и возвращают изделиям первоначальный вид.
+            Это позволяет продлить срок использования кожаных и меховых изделий.
+            сохраняя при этом их эстетичный вид."
 
 
   activerecord:
