--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -36,6 +36,15 @@ uk:
             Зазвичай це виконується шляхом закладання строчок чи патчів на пошкоджені ділянки,
             що дозволяє джинсам виглядати як новими.
             Штуковка джинсових виробів допомагає продовжити термін служби джинс та зберегти їх стильний вигляд."
+      card3:
+        alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Ремонт шкіряних та хутрових виробів"
+        h2: "Ремонт шкіряних та хутрових виробів"
+        p1: "від 200 грн"
+        p2: "Дуже важлива процедура, яка зберігає якість та тривалість таких речей.
+            Під час ремонту фахівці здійснюють реставрацію пошкоджень,
+            замінюють застарілі деталі та повертають виробам першісний вигляд.
+            Це дозволяє продовжити термін використання шкіряних та хутрових виробів,
+            зберігаючи при цьому їх естетичний вигляд."
 
 
 
