--- a/config/locales/models/article_uk.yml
+++ b/config/locales/models/article_uk.yml
@@ -15,5 +15,6 @@ uk:
 
         image: Фото
         published: Статус
+        published_eq: Показати неопубликовані
         created_at_field: Створено
         updated_at_field: Оновлено
