--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -55,6 +55,58 @@ ru:
             заменяют устаревшие детали и возвращают изделиям первоначальный вид.
             Это позволяет продлить срок использования кожаных и меховых изделий.
             сохраняя при этом их эстетичный вид."
+      card4:
+        alt: "Швейная мастерская ☞ ДРУЖБА ☜ - Подгон низа"
+        h2: "Подгон низа"
+        p1: "от 150 грн"
+        p2: "Это процесс коррекции длины джинсов, платьев, пальто и других вещей снизу.
+            Этот вид ремонта очень популярен среди людей, желающих подогнать свою одежду под
+            свои размеры и создать изысканный образ.
+            Правильно подгнаный низ может значительно улучшить внешний вид и сделать образ
+            более стильным и ухоженным."
+      card5:
+        alt: "Швейная мастерская ☞ ДРУЖБА ☜ - Мелкий ремонт одежды"
+        h2: "Мелкий ремонт одежды"
+        p1: "от 50 грн"
+        p2: "Эта услуга позволяет исправлять маленькие повреждения на вашей одежде.
+            Это может быть зашивание пуговиц, закрепление швов или зашивание дырок.
+            Поддерживая одежду в надлежащем состоянии, вы экономите время и деньги на пошиве новой
+            одежды, а также заботитесь об окружающей среде, избежав быстрого выбрасывания
+            старых вещей."
+      card6:
+        alt: "Швейная мастерская ☞ ДРУЖБА ☜ - Подшивание штор"
+        h2: "Подшивание штор"
+        p1: "от 200 грн"
+        p2: "Эта процедура помогает создать эстетичный вид помещения,
+            а также повысить функциональность штор, позволяя им лучше защищать от солнечных
+            лучей или обеспечивать приватность. Подшивка штор может быть важной частью оформления
+            любого интерьера, способствуя созданию уютной и гармоничной атмосферы."
+
+  service:
+    dl1:
+      dt:
+        alt: "Швейная мастерская ☞ ДРУЖБА ☜ - Быстро и качественно."
+        p: "Быстро и качественно."
+      dd: "Наш сервис по ремонту одежды предлагает быстрое и
+          качественное решение для восстановления вашей любимой одежды."
+    dl2:
+      dt:
+        alt: "Швейная мастерская ☞ ДРУЖБА ☜ - Опытные мастера."
+        p: "Опытные мастера."
+      dd: "Наши опытные мастера могут отремонтировать любые повреждения,
+          от мелких разрывов до сложных переделок."
+    dl3:
+      dt:
+        alt: "Швейная мастерская ☞ ДРУЖБА ☜ - Разные типы тканей."
+        p: "Разные типы тканей."
+      dd: "Мы работаем с разнообразными типами тканей и можем вернуть
+          вашей одежде первоначальный вид и функциональность."
+    dl4:
+      dt:
+        alt: "Швейная мастерская ☞ ДРУЖБА ☜ - От переделки, до пошива."
+        p: "От ремонта, до пошива."
+      dd: "От переделки старых вещей до создания новых - мы готовы помочь
+          вам продлить жизнь вашей одежды."
 
 
 
