--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -53,9 +53,59 @@ uk:
             замінюють застарілі деталі та повертають виробам першісний вигляд.
             Це дозволяє продовжити термін використання шкіряних та хутрових виробів,
             зберігаючи при цьому їх естетичний вигляд."
+      card4:
+        alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Підгін низу"
+        h2: "Підгін низу"
+        p1: "від 150 грн"
+        p2: "Це процес корекції довжини джинсів,
+            суконь, пальт та інших речей знизу.
+            Цей вид ремонту є дуже популярним серед людей,
+            які хочуть підігнати своє одяг під свої розміри та створити вишуканий образ.
+            Правильно підігнаний низ може значно покращити зовнішній вигляд та зробити образ більш стильним і доглянутим."
+      card5:
+        alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Дрібний ремонт одягу"
+        h2: "Дрібний ремонт одягу"
+        p1: "від 50 грн"
+        p2: "Ця послуга дозволяє виправляти маленькі пошкодження на вашому одязі.
+            Це може бути зашивання ґудзиків, закріплення швів або зашивання дирок.
+            Підтримуючи одяг у належному стані, ви економите час і гроші на пошитті нового одягу,
+            а також дбаєте про навколишнє середовище, уникнувши швидкого викидання старих речей."
+      card6:
+        alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Підшивання штор"
+        h2: "Підшивання штор"
+        p1: "від 200 грн"
+        p2: "Ця процедура допомагає створити естетичний вигляд приміщення,
+            а також підвищити функціональність штор,
+            дозволяючи їм краще захищати від сонячних променів або забезпечувати приватність.
+            Підшивання штор може бути важливою частиною оформлення будь-якого інтер'єру,
+            сприяючи створенню затишної та гармонійної атмосфери."
 
-
-
+  service:
+    dl1:
+      dt:
+        alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Швидко та якісно."
+        p: "Швидко та якісно."
+      dd: "Наш сервіс з ремонту одягу пропонує швидке та якісне рішення для відновлення вашого
+          улюбленого одягу."
+    dl2:
+      dt:
+        alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Досвідчені майстри."
+        p: "Досвідчені майстри."
+      dd: "Наші досвідчені майстри можуть відремонтувати будь-які пошкодження,
+          від дрібних розривів до складних переробок."
+    dl3:
+      dt:
+        alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Різні типи тканин."
+        p: "Різні типи тканин."
+      dd: "Ми працюємо з різноманітними типами тканин і можемо повернути
+          вашому одязі початковий вигляд та функціональність."
+    dl4:
+      dt:
+        alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Від переробки, до пошиття."
+        p: "Від ремонту, до пошиття."
+      dd: "Від переробки старих речей до створення нових - ми готові допомогти
+          вам продовжити життя вашого одягу."
+ 
   activerecord:
     models:
       admin_user: Користувач
