--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -86,7 +86,51 @@ ru:
             лучей или обеспечивать приватность. Подшивка штор может быть важной частью оформления
             любого интерьера, способствуя созданию уютной и гармоничной атмосферы."
 
+    about:
+      h2: Почему нам доверяют?
+      p1: Многолетний опыт и безупречная репутация
+      p2: Мы внимательно выслушаем каждого клиента, посоветуем лучшее решение,
+          качественно и быстро выполним заказ.
+      dl1:
+        img: Новое современное оборудование
+        p: Новое современное оборудование
+        dd: В нашей швейной мастерской мы используем новейшее оборудование,
+            благодаря которому качество наших работ всегда на высоком уровне.
+            Мы стремимся к идеальному качеству каждого шва, каждой детали и каждого изделия,
+            поэтому вкладываем усилия по улучшению технического оборудования. Наши клиенты могут быть уверены,
+            что у нас они получат продукт высокого качества, изготовленный с учетом современных стандартов.
+      dl2:
+        img: Дипломированные мастера
+        p: Дипломированные мастера
+        dd: Все наши мастера имеют профильное образование и обладают современными технологиями ремонта одежды и кроя.
+            Наши навыки и знания позволяют нам профессионально восстанавливать одежду,
+            выполнять сложные швы и крой, чтобы обеспечить клиентам качественный и модный ремонт.
+            Мы горды, что наши мастера являются опытными специалистами в отрасли и всегда готовы предоставить лучший
+            сервис для наших клиентов.
+      dl3:
+        img: Гибкие цены
+        p: Гибкие цены
+        dd: Стоимость ремонта одежды в нашей мастерской – это всегда выгодный выбор.
+            Вы не только получаете качественный сервис от опытных мастеров,
+            но также сэкономите деньги по сравнению с покупкой новой одежды.
+            Цены на ремонт обычно доступны и гибки,
+            а приятная атмосфера мастерской делает процесс еще более приятным.
+      dl4:
+        img: Гарантия качества
+        p: Гарантия качества
+        dd: Мы гарантируем качественное и быстрое обслуживание для каждого нашего клиента.
+            Наша команда профессионалов всегда готова предоставить вам самый лучший сервис и
+            решить любые вопросы, чтобы обеспечить ваше удовольствие. Мы стремимся к идеальности
+            в каждой детали, чтобы сделать ваш опыт с нами незабываемым и приятным.
+      h3_1: Мы ценим ваше и свое время, поскольку это один из самых ценных ресурсов, которыми мы располагаем.
+      h3_2: Потому качество наших услуг всегда на высоком уровне.
+
   service:
+    h1: Наши услуги
+    h2_1: Ремонт одежды
+    h2_2: Индивидуальный пошив одежды
+    h3: "Наши работы:"
+    back: Вернуться на предыдущую страницу
     dl1:
       dt:
         alt: "Швейная мастерская ☞ ДРУЖБА ☜ - Быстро и качественно."
@@ -111,6 +155,83 @@ ru:
         p: "От ремонта, до пошива."
       dd: "От переделки старых вещей до создания новых - мы готовы помочь
           вам продлить жизнь вашей одежды."
+
+  prices:
+    h1: Наши цены
+    th_1_1: Услуга по ремонту одежды
+    th_1_2: Услуга по индивидуальному пошиву одежды
+    th_2: Цена
+    td_1: от
+    td_2: грн.
+
+  faq:
+    h1: Часто задаваемые вопросы
+    h2_1: Ваши наиболее задаваемые
+    h2_2: вопросы
+    q1: Осуществляете ли вы ремонт одежды?
+    a1: Мы сможем исправить тканевые изделия, а также изделия из кожи и меха.
+        Осуществляем ремонт любой сложности.
+    q2: Сколько мне будет стоить исправить испорченный или поврежденный язык?
+    a2: Расчет конечного качества зависит от сложности ремонта. Посмотрите ориентировочные
+    a2_1: цены
+    a2_2: ремонт одежды.
+    q3: Я могу у вас заказать пошив какой-то вещи индивидуально?
+    a3: Конечно. Мы занимаемся индивидуальным пошивом платьев, брюк, юбок, джинсов, пальто и т.д.
+        С полным перечнем услуг можно ознакомиться в соответствующем
+    a3_1: разделе
+    a3_2: нашего сайта.
+    q4: Сколько стоит индивидуальное пошив?
+    a4: На стоимость пошива влияют очень многие факторы, такие как сложность и фасон изделия,
+        качество и количество материалов; срочность пошива. Посмотрите ориентировочные
+    a4_1: цены
+    a4_2: на индивидуальный пошив одежды.
+    q5: Вы работаете с материалами заказчика для пошива одежды?
+    a5: Да. После консультации и снятия мерок вы можете приобрести необходимое количество ткани и фурнитуры,
+        и предоставить нам для работы.
+        Мы также можем приобрести необходимые материалы для вас.
+    q6: Совпадают ли ваши цены на сайте с реальными ценами?
+    a6: Мы обновляем цены на сайте согласно тем ценам, которые сейчас фактически,
+        поэтому цены на сайте актуальны на любой момент времени, если бы вы их не посмотрели.
+    q7: Сколько времени занимает ремонт или пошив одежды?
+    a7: Время ремонта зависит от сложности работы. В среднем время ремонта занимает 1-2 дня.
+        Время выполнения работ по индивидуальному пошиву одежды обсуждается с каждым клиентом лично.
+    p1: Если у вас еще остались вопросы, заполните
+    p2: форму
+    p3: ", и мы обязательно с вами свяжемся, да и дадим ответы на интересующие вас вопросы."
+
+  contacts:
+    warning:
+      div1: "В связи с отключением электроэнергии график работы может быть изменен.
+            В случае возникновения вопросов звоните по телефону:"
+      a: "+38 097 287 05 71"
+      div2: "Просим прощения за неудобства."
+    h1: Как нас найти
+    h2: "Посетите нас. Мы всегда вам рады:"
+    h3_1: "Наш адрес:"
+    p_1: 50055, ул. Кокчетавская 3, г. Кривой Рог
+    h3_2: "Времена работы:"
+    p_2: "Вторник - Пятница: 9:00 - 17:00"
+    h3_3: "Суббота: 10:00 - 16:00"
+    p_3: "Воскресенье - Понедельник: Закрыто"
+    h3_4: "Контакты:"
+    p_4: "Email:"
+    p_4_a: "ksuha@druzhba.biz.ua"
+    p_5: "Телефон:"
+    p_5_a: "+38 097 287 05 71 (позвонить по телефону)"
+    p_6: Чтобы нас найти, нужно доехать на любом удобном для вас транспорте до остановки
+    p_7: "\"Дружба\"."
+    p_8: "Если ехать со стороны 95-го квартала или Соцгорода,
+          то наше ателье будет немного позади остановки (около 50 метров).
+          Если вы будете ехать с направления железнодорожного вокзала Кривой Рог – Главный,
+          то вам нужно будет пересечь дорогу на светофоре, и повернуть направо
+          (около 150 метров)."
+    p_9: Как доехать с направления 95-го квартала и Соцгорода
+    p_10: Как доехать с направления железнодорожного вокзала Кривой Рог - Главный
+
+  articles:
+    h1: Наш блог
+
+  footer: Швейная мастерская ☞ ДРУЖБА ☜
 
 
 
