--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -84,7 +84,51 @@ uk:
             Підшивання штор може бути важливою частиною оформлення будь-якого інтер'єру,
             сприяючи створенню затишної та гармонійної атмосфери."
 
+    about:
+      h2: Чому нам довіряють?
+      p1: Багаторічний досвід та бездоганна репутація
+      p2: Ми уважно вислухаємо кожного клієнта, порадимо найкраще рішення,
+          якісно та швидко виконаємо замовлення.
+      dl1:
+        img: Нове сучасне обладнання
+        p: Нове сучасне обладнання
+        dd: У нашій швейній майстерні ми використовуємо найновіше обладнання,
+            завдяки якому якість наших робіт завжди на високому рівні.
+            Ми прагнемо до ідеальної якості кожного шва, кожної деталі і кожного виробу,
+            тому вкладаємо зусилля у покращення технічного обладнання. Наші клієнти можуть бути впевнені,
+            що у нас вони отримають продукт високої якості, виготовлений з урахуванням найсучасніших стандартів.
+      dl2:
+        img: Дипломовані майстри
+        p: Дипломовані майстри
+        dd: Усі наші майстри мають профільну освіту та володіють сучасними технологіями ремонту одягу та крою.
+            Наші навички і знання дозволяють нам професійно відновлювати одяг,
+            виконувати складні шви та крій, щоб забезпечити клієнтам якісний та модний ремонт.
+            Ми горді, що наші майстри є досвідченими фахівцями у галузі та завжди готові надати найкращий
+            сервіс нашим клієнтам.
+      dl3:
+        img: Гнучкі ціни
+        p: Гнучкі ціни
+        dd: Вартість ремонту одягу в нашій майстерні - це завжди вигідний вибір.
+            Ви не лише отримуєте якісний сервіс від досвідчених майстрів,
+            але також заощадите гроші, порівняно з покупкою нового одягу.
+            Ціни на ремонт зазвичай доступні та гнучкі,
+            а приємна атмосфера майстерні робить процес ще приємнішим.
+      dl4:
+        img: Гарантія якості
+        p: Гарантія якості
+        dd: Ми гарантуємо якісне та швидке обслуговування для кожного нашого клієнта.
+            Наша команда професіоналів завжди готова надати вам найкращий сервіс і
+            вирішити будь-які питання, щоб забезпечити ваше задоволення. Ми прагнемо до відмінності
+            в кожній деталі, щоб зробити ваш досвід з нами незабутнім і приємним.
+      h3_1: Ми цінуємо ваш та свій час, оскільки це один з найцінніших ресурсів, яким ми володіємо.
+      h3_2: Тому якість наших послуг завжди на високому рівні.
+
   service:
+    h1: Наші послуги
+    h2_1: Ремонт одягу
+    h2_2: Індивідуальний пошив одягу
+    h3: "Наші роботи:"
+    back: Повернутись на попередню сторінку
     dl1:
       dt:
         alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Швидко та якісно."
@@ -109,6 +153,83 @@ uk:
         p: "Від ремонту, до пошиття."
       dd: "Від переробки старих речей до створення нових - ми готові допомогти
           вам продовжити життя вашого одягу."
+
+  prices:
+    h1: Наші ціни
+    th_1_1: Послуга по ремонту одягу
+    th_1_2: Послуга індивідуального пошиву
+    th_2: Цена
+    td_1: від
+    td_2: грн.
+
+  faq:
+    h1: Найчастіші питання
+    h2_1: Ваші найчастіші
+    h2_2: питання
+    q1: Чи здійснюєте ви ремонт одягу?
+    a1: Ми зможемо виправити вам тканеві виріби, а також виріби з кожі та хутра.
+        Здійснюємо ремонт будь-якої складності.
+    q2: Сільки мені буде коштувати виправити зіпсовану або пошкоджену речь?
+    a2: Розрахунок кінцевої якості залежить від складності ремонту. Подивіться орієнтовні
+    a2_1: ціни
+    a2_2: на ремонт одягу.
+    q3: Я можу в вас заказати пошив якойсь речі індивідуально?
+    a3: Звісно. Ми займаємось індивідуальним пошивом суконь, брюк, спідниць, джинсів, пальто, тощо.
+        З повним перечнем послуг ви можете ознайомитись у відповідному
+    a3_1: розділі
+    a3_2: нашого сайта.
+    q4: Скільки коштує індивідуальний пошив?
+    a4: На вартість пошиву впливають дуже багато факторів, такі як складність иа фасон вирібу,
+        якість та кількість матеріалів, терміновість пошиву. Подивіться орієнтовні
+    a4_1: ціни
+    a4_2: на індивідуальний пошив одягу.
+    q5: Ви працюєте з матеріалами замовника для пошиву одягу?
+    a5: Так. Після консультації та зняття вимірів, ви можете придбати необхідну кількість тканини та фурнітури,
+        та предоставити нам для роботи.
+        Ми також можемо придбати необхідні матеріали за вас.
+    q6: Чи співпадають ваші ціни на сайті з реальними цінами?
+    a6: Ми оновляємо ціни на сайті згідно тих цін, котрі зараз є фактично,
+        тому цини на сайті актуальні на будь який момент часу, коли б ви їх не подивились.
+    q7: Скільки по часу займає ремонт або пошив одягу?
+    a7: Час ремонту залежить від складності роботи. У середньому час ремонту займає 1-2 дня.
+        Часи виконання робіт по індивідуальному пошиву одягу обговорюється з кожним клієнтом особисто.
+    p1: Якщо у вас ще залишились запитання, заповніть
+    p2: форму
+    p3: ", і ми обов'язково з вами зв'яжемось, та і дамо відповіді на питання, що вас цікавлять."
+
+  contacts:
+    warning:
+      div1: "У зв'язку з відключенням електроенергії, графік роботи може бути змінений.
+            У разі виникнення питань телефонуйте:"
+      a: "+38 097 287 05 71"
+      div2: "Просимо вибачення за незручності."
+    h1: Як нас знайти
+    h2: "Завітайте до нас. Ми завжди вам раді:"
+    h3_1: "Наша адреса:"
+    p_1: 50055, вул. Кокчетавська 3, м. Кривий Ріг
+    h3_2: "Часи роботи:"
+    p_2: "Вівторок - Пʼятниця: 9:00 - 17:00"
+    h3_3: "Субота: 10:00 - 16:00"
+    p_3: "Неділя - Понеділок: Зачинено"
+    h3_4: "Контакти:"
+    p_4: "Email:"
+    p_4_a: "ksuha@druzhba.biz.ua"
+    p_5: "Телефон:"
+    p_5_a: "+38 097 287 05 71 (зателефонувати)"
+    p_6: Щоб нас знайти, треба доїхати на будь-якому зручному для вас транспорті до зупинки
+    p_7: "\"Дружба\"."
+    p_8: "Якщо їхати зі сторони 95-го кварталу або Соцгорода,
+          то наше ательє буде трохи позаду зупинки (близько 50 метрів).
+          Якщо ви будете їхати з напрямку залізничного вокзалу Кривий Ріг - Головний,
+          то вам потрібно буде перетнути дорогу на світлофорі, та повернути направо
+          (близько 150 метрів)."
+    p_9: Як доїхати з напрямку 95-го кварталу та Соцгорода
+    p_10: Як доїхати з напрямку залізничного вокзалу Кривий Ріг - Головний
+
+  articles:
+    h1: Наш блог
+
+  footer: Швейна майстерня ☞ ДРУЖБА ☜
  
   activerecord:
     models:
