--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -24,8 +24,8 @@ ru:
       articles: "Блог"
  
     hero-1:
-      top: "Ищете идеальный ремонт одежды?"
-      h1: "Ми предлагаем качественный ремонт и эксклюзивный пошив одежды. Весь спектр услуг портного."
+      h1: "Ищете идеальный ремонт одежды?"
+      h2: "Мы предлагаем качественный ремонт и эксклюзивный пошив одежды. Весь спектр услуг портного."
       left: "Доверьтесь мастерам!"
       right: "Ваш стиль - это наша забота!"
       img_alt: "Швейная мастерская ☞ ДРУЖБА ☜"
