--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -24,8 +24,8 @@ uk:
       articles: "Блог"
 
     hero-1:
-      top: "Шукаєте ідеальний ремонт одягу?"
-      h1: "Ми пропонуємо якісний ремонт та ексклюзивне пошиття одягу. Весь спектр послуг кравця."
+      h1: "Шукаєте ідеальний ремонт одягу?"
+      h2: "Ми пропонуємо якісний ремонт та ексклюзивне пошиття одягу. Весь спектр послуг кравця."
       left: "Довіртеся майстрам!"
       right: "Ваш стиль – це наша турбота!"
       img_alt: "Швейна майстерня ☞ ДРУЖБА ☜"
