--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -217,7 +217,7 @@ ru:
     p_4: "Email:"
     p_4_a: "ksuha@druzhba.biz.ua"
     p_5: "Телефон:"
-    p_5_a: "+38 097 287 05 71 (позвонить по телефону)"
+    p_5_a: "+38 097 287 05 71 (позвонить)"
     p_6: Чтобы нас найти, нужно доехать на любом удобном для вас транспорте до остановки
     p_7: "\"Дружба\"."
     p_8: "Если ехать со стороны 95-го квартала или Соцгорода,
