--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -158,7 +158,7 @@ uk:
     h1: Наші ціни
     th_1_1: Послуга по ремонту одягу
     th_1_2: Послуга індивідуального пошиву
-    th_2: Цена
+    th_2: Ціна
     td_1: від
     td_2: грн.
 
