--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -25,9 +25,8 @@ ru:
  
     hero-1:
       h1: "Ищете идеальный ремонт одежды?"
-      h2: "Мы предлагаем качественный ремонт и эксклюзивный пошив одежды. Весь спектр услуг портного."
-      left: "Доверьтесь мастерам!"
-      right: "Ваш стиль - это наша забота!"
+      p: "Швейная мастерская ☞ ДРУЖБА ☜ - это место, где ваша одежда обретает новую жизнь. Мы специализируемся на индивидуальном пошиве, ремонте и реставрации одежды для мужчин и женщин."
+      h2: "Ваш стиль - это наша забота!"
       img_alt: "Швейная мастерская ☞ ДРУЖБА ☜"
 
     services:
