--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -25,9 +25,8 @@ uk:
 
     hero-1:
       h1: "Шукаєте ідеальний ремонт одягу?"
-      h2: "Ми пропонуємо якісний ремонт та ексклюзивне пошиття одягу. Весь спектр послуг кравця."
-      left: "Довіртеся майстрам!"
-      right: "Ваш стиль – це наша турбота!"
+      p: "Швейна майстерня ☞ ДРУЖБА ☜ - це місце, де ваш одяг знаходить нове життя. Ми спеціалізуємося на індивідуальному пошитті, ремонті та реставрації одягу для чоловіків та жінок."
+      h2: "Ваш стиль – це наша турбота!"
       img_alt: "Швейна майстерня ☞ ДРУЖБА ☜"
 
     services:
