add money flow option

--- a/config/locales/models/order.uk.yml
+++ b/config/locales/models/order.uk.yml
@@ -12,6 +12,8 @@ uk:
         updated_at_field: Оновлено
         price: Вартість
         description: Опис
+      order_detail:
+        service_id: Послуга
 
   enums:
     admin:
