--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -127,33 +127,32 @@ ru:
   service:
     h1: Наши услуги
     h2_1: Ремонт одежды
-    h2_2: Индивидуальный пошив одежды
+    h2_2: Пошив одежды на заказ
     h3: "Наши работы:"
     back: Вернуться на предыдущую страницу
     dl1:
       dt:
-        alt: "Швейная мастерская ☞ ДРУЖБА ☜ - Быстро и качественно."
-        p: "Быстро и качественно."
-      dd: "Наш сервис по ремонту одежды предлагает быстрое и
-          качественное решение для восстановления вашей любимой одежды."
+        alt: "Швейная мастерская ☞ ДРУЖБА ☜ - Всегда быстро и качественно.."
+        p: "Всегда быстро и качественно.."
+      dd: "Мы предлагаем быстрое и качественное решение по восстановлению ваших любимых вещей."
     dl2:
       dt:
-        alt: "Швейная мастерская ☞ ДРУЖБА ☜ - Опытные мастера."
-        p: "Опытные мастера."
-      dd: "Наши опытные мастера могут отремонтировать любые повреждения,
+        alt: "Швейная мастерская ☞ ДРУЖБА ☜ - Опыт и мастерство.."
+        p: "Опыт и мастерство.."
+      dd: "Все наши мастера имеют профильное образование и  смогут отремонтировать любые повреждения,
           от мелких разрывов до сложных переделок."
     dl3:
       dt:
-        alt: "Швейная мастерская ☞ ДРУЖБА ☜ - Разные типы тканей."
-        p: "Разные типы тканей."
+        alt: "Швейная мастерская ☞ ДРУЖБА ☜ - Работаем с разными материалами."
+        p: "Работаем с разными материалами."
       dd: "Мы работаем с разнообразными типами тканей и можем вернуть
-          вашей одежде первоначальный вид и функциональность."
+          вашей одежде первоначальный вид и функциональность. "
     dl4:
       dt:
-        alt: "Швейная мастерская ☞ ДРУЖБА ☜ - От переделки, до пошива."
+        alt: "Швейная мастерская ☞ ДРУЖБА ☜ - От ремонта, до пошива."
         p: "От ремонта, до пошива."
-      dd: "От переделки старых вещей до создания новых - мы готовы помочь
-          вам продлить жизнь вашей одежды."
+      dd: "От ремонта старых вещей до создания новых - мы готовы помочь
+          вам продлить жизнь вашей одежды. Пошив одежды на заказ."
 
   prices:
     h1: Наши цены
