--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -125,33 +125,32 @@ uk:
   service:
     h1: Наші послуги
     h2_1: Ремонт одягу
-    h2_2: Індивідуальний пошив одягу
+    h2_2: Пошив одягу на замовлення
     h3: "Наші роботи:"
     back: Повернутись на попередню сторінку
     dl1:
       dt:
-        alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Швидко та якісно."
-        p: "Швидко та якісно."
-      dd: "Наш сервіс з ремонту одягу пропонує швидке та якісне рішення для відновлення вашого
-          улюбленого одягу."
+        alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Завжди швидко та якісно.."
+        p: "Завжди швидко та якісно.."
+      dd: "Ми пропонуємо швидке та якісне рішення щодо відновлення ваших улюблених речей."
     dl2:
       dt:
-        alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Досвідчені майстри."
-        p: "Досвідчені майстри."
-      dd: "Наші досвідчені майстри можуть відремонтувати будь-які пошкодження,
+        alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Досвід та майстерність.."
+        p: "Досвід та майстерність.."
+      dd: "Усі наші майстри мають профільну освіту та зможуть відремонтувати будь-які пошкодження,
           від дрібних розривів до складних переробок."
     dl3:
       dt:
-        alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Різні типи тканин."
-        p: "Різні типи тканин."
+        alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Працюємо з різними матеріалами."
+        p: "Працюємо з різними матеріалами."
       dd: "Ми працюємо з різноманітними типами тканин і можемо повернути
-          вашому одязі початковий вигляд та функціональність."
+          вашому одязі початковий вигляд та функціональність. "
     dl4:
       dt:
-        alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Від переробки, до пошиття."
+        alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Від ремонту, до пошиття."
         p: "Від ремонту, до пошиття."
-      dd: "Від переробки старих речей до створення нових - ми готові допомогти
-          вам продовжити життя вашого одягу."
+      dd: "Від ремонту старих речей до створення нових – ми готові допомогти
+          вам продовжити життя вашого одягу. Пошиття одягу на замовлення"
 
   prices:
     h1: Наші ціни
