--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -4,6 +4,14 @@ ru:
     ru: рус
     uk: укр
 
+  cookies:
+    p1: "Этот сайт использует cookie Google для анализа трафикаи для показа персонализированной рекламы.
+        Ознакомьтесь с нашей "
+    link: политикой конфиденциальности
+    p2: ", чтобы узнать больше."
+    accept: Принять
+    reject: Отклонить
+
   landing:
     contact_form:
       title: Отправить сообщение
