--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -4,6 +4,14 @@ uk:
     ru: рус
     uk: укр
 
+  cookies:
+    p1: "Цей сайт використовує cookie Google для аналізу трафіку для показу персоналізованої реклами.
+        Ознайомтесь з нашою"
+    link: політикою конфіденційності
+    p2: ", щоб дізнатися більше."
+    accept: Прийняти
+    reject: Відхилити
+
   landing:
     contact_form:
       title: Відправити повідомлення
