--- a/config/locales/models/service.uk.yml
+++ b/config/locales/models/service.uk.yml
@@ -11,7 +11,7 @@ uk:
 
         title_ru: Назва послуги (рус)
         subtitle_ru: Назва послуги для опису (рус)
-        description_uru: Короткий опис (рус)
+        description_ru: Короткий опис (рус)
         body_ru: Опис послуги (рус)      
 
         photo: Фото
